--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
+    "moti": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-magnus": "^1.0.63",
     "react-native-modal": "^13.0.1",
     "react-native-quick-md5": "^3.0.6",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "sonner-native": "^0.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
